--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -2,8 +2,8 @@ FROM node:16-alpine
 
 WORKDIR /app
 
-COPY /dist/apps/web/ .
+COPY dist/ .
 
 RUN npm install
 
-CMD ["npm", "start", "--", "-p", "4300"]
+CMD ["npm", "start", "--", "-p", "4200"]
